css/main.css
/* ELEMENT TAGS */

/* Applying background colour for page  
*/

@import url("https://fonts.googleapis.com/css?family=Grenze+Gotisch&display=swap");

html {
	height: 100%;
}

body {
	height: 100%;
	width: 100%;
}

/* Applying background colour for header/nav  */
nav {
	background-color: #ffffff00;
}

/* Applying background colour for articles and blog column */
article {
	background-color: #ffffff80;
}

article img {
	background-color: #ffffff00;
}

/* changing colour for code sections to black */
code {
	color: black;
}

/* CLASSES*/

/*LINKS*/

/* changing colour for links in nav to greyish colour */
.nav-link {
	color: rgb(0, 53, 53);
}

/* changing colour for article titles/links to black */
.article-link {
	color: #000000;
}

/* changing colour for article titles/links to black when hovered over
  fixed blue underline when hovered over */
.article-link:hover {
	color: #000000;
}

/* OTHER */

/* give divs size to space navbar down so that it looks right, and moves over spacer divs a nd collapses on scroll"*/
.spacer-block-index {
	height: 50px;
}
.spacer-block-article {
	height: 20px;
}

/* makes linkedin logo smaller that it real size*/

/* gives articles on main page a border when hovered over to suggest they are clickable" */

.article-pic:hover {
	border: 1px solid #74f2ce;
}

/* add space between paragraphs and headings */

.blog-column h1 {
	margin-bottom: 5%;
}
.blog-column h5 {
	margin-bottom: 4%;
	margin-top: 8%;
}
.blog-column p {
	margin-left: 5%;
	margin-right: 5%;
}
.blog-column ol {
	margin-left: 5%;
}

/* add space between last paragraph and notes/links section */

#last-blog-paragraph {
	padding-bottom: 10%;
}

.index-main-container {
	background: url(../images/background3-mobile.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: fixed;
	background-color: rgb(200, 65, 45);
	width: 100%;
	min-height: 100%;
	height: auto;
	font-family: "Grenze Gotisch", "San Serif";
}

.index-name {
	color: #ffffff;
	font-size: 80px;
}

.new {
	color: #ffffff;
}

.old {
	transition: opacity 0.2s linear;
}

.blog-link {
	color: #000000;
}

.blog-link:hover {
	color: #00000080;
	text-decoration: none;
}

.contact-link {
	color: #ffffff;
}

.contact-link:hover {
	color: #ffffff80;
	text-decoration: none;
}

#title-container {
	padding-top: 40%;
	padding-left: 5%;
	padding-right: 5%;
}

article p {
	font-size: 3em;
	font-family: "Lucida-sans";
	padding-bottom: 5%;
}

article h5 {
	font-size: 3em;
	font-weight: bolder;
	font-family: "Lucida-sans";
}

article h2 {
	font-size: 4em;
	font-weight: bolder;
	font-family: "Lucida-sans";
	padding-bottom: 5%;
}

#profileImg {
	width: 70%;
	height: auto;
	padding-bottom: 5%;
}

.linkedin-logo {
	height: 50px;
	width: auto;
}

.page-title {
	color: #ffffff;
	font-size: 7em;
}

.go-back-link {
	font-size: 2.5em;
}

.go-back-link-contact {
	font-size: 2.5em;
}

.article-name-title {
	color: #ffffff;
	font-size: 7em;
}

@media (min-width: 1100px) {
	.index-main-container {
		background: url(../images/background3.jpg);
		background-size: cover;
		background-attachment: fixed;
	}

	.index-name {
		font-size: 120px;
	}

	#title-container {
		padding-top: 15%;
		padding-left: 5%;
		padding-right: 5%;
		height: 100%;
	}
	.new {
		opacity: 0;
		position: absolute;
		transition: opacity 0.7s linear;
	}

	.wrap:hover .old {
		opacity: 0;
	}
	.wrap:hover .new {
		opacity: 1;
	}

	.linkedin-logo {
		height: 30px;
		width: auto;
	}

	article p {
		font-size: 1em;
		font-family: "Lucida-sans";
		padding: 0%;
	}

	article h2 {
		font-size: 2em;
		font-family: "Lucida-sans";
		padding: 0%;
	}

	#profileImg {
		width: 200px;
		height: auto;
		padding-bottom: 0%;
	}

	.go-back-link {
		font-size: 1.25em;
	}

	.page-title {
		color: #ffffff;
		font-size: 5em;
	}
	.go-back-link-contact {
		font-size: 1.25em;
	}

	.article-name-title {
		color: #ffffff;
		font-size: 5em;
	}

	article h5 {
		font-size: 1.25em;
		font-weight: bolder;
		font-family: "Lucida-sans";
	}
}

